--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               <label for="pass_word">Password</label>
               <br /> <br />
               <!-- Login-Submit Buttons -->
-              <a class="waves-effect waves-light btn">Login</a>
-              <a class="waves-effect waves-light btn">Cancel</a>
+              <a id="login-btn" class="waves-effect waves-light btn">Login</a>
+              <a id="cancel-btn" class="waves-effect waves-light btn">Cancel</a>
             </div>
           </div>
         </div>
