Add id to parent row

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <!-- LOGIN SCREEN -->
-    <div class="row">
+    <div id="roq" class="row">
       <!--  Left Blue column -->
       <!-- <div id="blue" class="col s4 blue lighten-4">This div is 4-columns wide</div> -->
 
