Add loader class/div tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div id="roq" class="row">
       <!--  Left Blue column -->
       <!-- <div id="blue" class="col s4 blue lighten-4">This div is 4-columns wide</div> -->
-
       <!--  Right Orange & Green column -->
       <div id="orange" class="col s12">
         <!-- Title::POSTIG -->
@@ -43,6 +42,23 @@
               <!-- Login-Submit Buttons -->
               <a id="login-btn" class="waves-effect waves-light btn">Login</a>
               <a id="cancel-btn" class="waves-effect waves-light btn">Cancel</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blue load spinner -->
+      <div id="loader" class="col s12 center-align container-wide">
+        <div id="preload" class="preloader-wrapper">
+          <div id="spinner" class="spinner-layer spinner-blue-only">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+              <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+              <div class="circle"></div>
             </div>
           </div>
         </div>
