--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <!-- <title>Postig</title> -->
+    <title>Postig</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./styles.css">
@@ -17,6 +17,7 @@
     <div id="roq" class="row">
       <!--  Left Blue column -->
       <!-- <div id="blue" class="col s4 blue lighten-4">This div is 4-columns wide</div> -->
+
       <!--  Right Orange & Green column -->
       <div id="orange" class="col s12">
         <!-- Title::POSTIG -->
