Modify layout, remove dropdown

--- a/main-page.html
+++ b/main-page.html
@@ -1,24 +1,27 @@
-<div id="left" class="col s4 animated fadeInLeft">
-  <div id="sender" class="valign-wrapper row">
-    <div id="return" class="col s12 container-wide">
-      <div class="input-field col s12">
-        <textarea id="textarea1" class="materialize-textarea"></textarea>
-        <label for="textarea1">Sender:</label>
-      </div>
-    </div>
-  </div>
-  <div id="receiver" class="row">
-    <div id="deliver" class="col s12 container-wide">
-      <div class="input-field col s12">
-        <textarea id="textarea2" class="materialize-textarea"></textarea>
-        <label for="textarea1">Receiver:</label>
-      </div>
-  </div>
-  </div>
-</div>
-
-<div id="right" class="blue lighten-5 col s8">
+<div id="left" class="blue lighten-5 col s8">
   <div id="label" class="valign-wrapper center-align col s8 offset-s2">
     <img class="center-align animated fadeIn z-depth-5" src="./img/New-Label.jpg" style="width:384;height:576px" />
   </div>
+</div>
+
+<div id="right" class="col s4 animated fadeInRight">
+  <div id="sender" class="valign-wrapper row">
+    <div id="return" class="col s12 container">
+      <div class="input-field col s12">
+        <textarea id="textarea1" class="materialize-textarea"></textarea>
+        <label id="send" for="textarea1">Sender</label>
+      </div>
+    </div>
+  </div>
+
+  <div id="receiver" class="row">
+    <div id="deliver" class="col s12 container">
+      <div class="input-field col s12">
+        <textarea id="textarea2" class="materialize-textarea"></textarea>
+        <label id="reci" for="textarea1">Receiver</label>
+      </div>
+    </div>
+  </div>
+
+  
 </div>
