Attempt to add dropdown for services

--- a/main-page.html
+++ b/main-page.html
@@ -47,6 +47,15 @@
     </div>
   </div>
 
+  <!-- reduces peformance; come back to it later -->
+  <!-- <div id="service" class="row">
+    <div id="service-list" class="col s12">
+      <select class="browser-default" disabled>
+        <option value="" disabled selected>First-Class Mail Package</option>
+      </select>
+    </div>
+  </div> -->
+
   <div id="print-btns" class="row">
     <div id="postig-left" class="col s5">
       <a id="postig-btn" class="waves-effect waves-light btn">POSTIĠ</a>
