--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
 
 
   <!-- Scripts -->
-  <script>
-    delete module.exports
-  </script>
+  <script>delete module.exports</script>
   <script src="./vendor/jquery-3.1.1.js"></script>
   <script type="text/javascript" src="./vendor/js/materialize.js"></script>
   <script src="./window.js" charset="utf-8"></script>
