Add placeholders for textarea & CREATE text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div id="sender" class="valign-wrapper row">
         <div id="return" class="col s12 container">
           <div class="input-field col s12">
-            <textarea id="textarea1" class="materialize-textarea"></textarea>
+            <textarea id="textarea1" class="materialize-textarea" placeholder="Erick Quintanilla&#13;&#10;1990 E Grand Ave&#13;&#10;El Segundo CA 90245"></textarea>
             <label id="send" for="textarea1">Sender</label>
           </div>
         </div>
@@ -68,7 +68,7 @@
       <div id="receiver" class="row">
         <div id="deliver" class="col s12 container">
           <div class="input-field col s12">
-            <textarea id="textarea2" class="materialize-textarea"></textarea>
+            <textarea id="textarea2" class="materialize-textarea" placeholder="Mail Man&#13;&#10;The United States Postal Office&#13;&#10;475 L'Enant Plz SW Rm 4446&#13;&#10;Washington DC 20260"></textarea>
             <label id="reci" for="textarea1">Receiver</label>
           </div>
         </div>
@@ -95,6 +95,7 @@
       </div>
       <!-- buttons [postig & sample] -->
       <div id="print-btns" class="row">
+        <label for="print-btns">Create</label>
         <div id="postig-left" class="col s5">
           <a id="postig-btn" class="waves-effect waves-light btn blue lighten-1">POSTIĠ</a>
         </div>
