Disable sender textarea1

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div id="sender" class="valign-wrapper row">
         <div id="return" class="col s12 container">
           <div class="input-field col s12">
-            <textarea id="textarea1" class="materialize-textarea" placeholder="Erick Quintanilla&#13;&#10;1990 E Grand Ave&#13;&#10;El Segundo CA 90245"></textarea>
+            <textarea disabled id="textarea1" class="materialize-textarea" placeholder="Erick Quintanilla&#13;&#10;1990 E Grand Ave&#13;&#10;El Segundo CA 90245"></textarea>
             <label id="send" for="textarea1">Sender</label>
           </div>
         </div>
