Rename left preview image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- preview window [4x6 label] -->
     <div id="left" class="blue lighten-5 col s8">
       <div id="label" class="valign-wrapper center-align col s8 offset-s2">
-        <img class="center-align animated fadeIn z-depth-5" src="./img/label.png" style="width:384;height:576px" />
+        <img class="center-align animated fadeIn z-depth-5" src="./img/placeholder.png" style="width:384;height:576px" />
       </div>
     </div>
     <!-- label inputs [addresses, weight, print] -->
