Update src location

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Postig</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./src/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./vendor/css/materialize.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="./vendor/animate.css" />
@@ -129,7 +129,7 @@
   <script>delete module.exports</script>
   <script src="./vendor/jquery-3.1.1.js"></script>
   <script type="text/javascript" src="./vendor/js/materialize.js"></script>
-  <script src="./window.js" charset="utf-8"></script>
+  <script src="./src/window.js" charset="utf-8"></script>
 </body>
 
 </html>
